@@ -1,6 +1,7 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - Fix attributes function (#29/#26)
     - Document and test removal of SoftBreak element
 
 0.17  2016-03-07 21:15:58 CET
